--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinosaur Game</title>
-    <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Welcome to Dino Game!</h1>
@@ -17,5 +17,5 @@
     <br>
     <h1 id="score">0</h1>
 </body>
-<script src="/script.js"></script>
+<script src="script.js"></script>
 </html>
